Creación de BIZ, DAL, MODELO Y UI

--- a/WindowsFormsBD/WindowsFormsBD.csproj
+++ b/WindowsFormsBD/WindowsFormsBD.csproj
@@ -46,12 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\DALCountries.cs" />
+    <Compile Include="DAL\DALDepartments.cs" />
+    <Compile Include="DAL\DALDependents.cs" />
+    <Compile Include="DAL\DALEmployees.cs" />
+    <Compile Include="DAL\DALJobs.cs" />
+    <Compile Include="DAL\DALLocations.cs" />
+    <Compile Include="DAL\DALRegions.cs" />
+    <Compile Include="Employee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Employee.Designer.cs">
+      <DependentUpon>Employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MODELO\Countries.cs" />
+    <Compile Include="MODELO\Departments.cs" />
+    <Compile Include="MODELO\Dependents.cs" />
+    <Compile Include="MODELO\Employees.cs" />
+    <Compile Include="MODELO\Jobs.cs" />
+    <Compile Include="MODELO\Locations.cs" />
+    <Compile Include="MODELO\Regions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -78,6 +98,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BIZ\" />
+    <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
